	    - misc regex compiling bugs

2002-08-26

	* Additions:
	    - t/rx/call.t -- rule call
	
	* Fixes:
	    - driver tidying and doc-update (Leo).
	    - regex fixes: advance, no-arg call

2002-08-27

	* Additions:
	    - "perl6 --test" to run tests faster by about 2x (Leo)
	    - overview.pod -- compiler structure overview (Joseph Ryan)

	* Fixes:
	    - doc updates in perl6 (Leo)
	    - remove Makefile parsing in pconfig.pl (Leo)

2002-08-28

	* Fixes:
	    - result values of try/CATCH
	    - backtracking @array-literals
	    - improved grammar compliance (e.g. 'sub')
	    - cool French quotes for regexes.
	* Additions:
	    - anonyous rules (some).
	
2002-09-04

	* Fixes:
	    - corrected t/rx/basic_6
	
	* Additions:
	    - more builtin functions: index, reverse, join (coming soon:
	      grep and map) (Joseph Ryan)

2002-09-05

	* Fixes:
	    - Backtracking into named rules
	    - rule parsing tweaks
	    - eliminate harmful context aliasing in regexes.
	    - hack for forward labels.
	    - /./ vs. /\./
	    - disallow alphanumeric delims for regexes
	    - allow 'sub' in place of '->' for anon subs
	    - subscripting on variables in regexes
	    - ++@x[$i] (Leo Toetsch)
	    - move initialization code to start of rule
	    - fit driver help message on a single screen

	* Additions:
	    - String interpolation (Joseph Ryan)

	* Test-failures:
	    - t/rx/call_2 -- backtracking bug.  Hopefully I'll track this
	      down soon.

2002-09-06

	* Fixes:
	    - rule state restored when backtracking called rules
	    - have driver use system(@args) to avoid shell meta-character
	      problems.
	    - quantifiers, stingy and otherwise, made more sane.

	* Additions:
	    - preliminary list of (un)implemented features in README
	
	* Test-failures:
	    - compiler/1_11: segfault, compiler/3_7: weird stack problem.
	      These seem to be either memory corruption or use of freed
	      memory -- small changes to the .p6 files make them go away.